charts/ingress-nodeports/chart/templates/jupyter-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyter-nodeport
  namespace: default
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: jupyter # label of the pod
  ports:
    - name: jupyter
      protocol: TCP
      port: 8888
      targetPort: 8888
      nodePort: 30109
