charts/ingress-nodeports/chart/templates/mariadb-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-nodeport
  namespace: default
spec:
  type: NodePort
  selector:
    app.kubernetes.io/instance: mariadb # label of the pod
  ports:
    - name: mariadb
      protocol: TCP
      port: 3306
      targetPort: 3306
      nodePort: 30100
