charts/ingress-nodeports/chart/templates/selenium-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: selenium-nodeport
  namespace: default
spec:
  type: NodePort
  selector:
    app.kubernetes.io/instance: selenium # label of the pod
  ports:
    - name: selenium
      protocol: TCP
      port: 4444
      targetPort: 4444
      nodePort: 30101
