charts/ingress-nodeports/chart/templates/timescale-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: timescale-nodeport
  namespace: default
spec:
  type: NodePort
  selector:
    app: timescale-timescaledb # label of the pod
  ports:
    - name: timescale
      protocol: TCP
      port: 5432
      targetPort: 5432
      nodePort: 30105
