charts/ingress-nodeports/chart/templates/jupyter-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyter
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: jupyter.tradex
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: jupyter
                port:
                  number: 8888
